# markdown-mentor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-site.yml
docs/: canonical-workflow.md  install-markitdown.md  markdown-library-maker.md  markdown-mentor.md  project-folder.md  workflow.md
examples/: README.md
examples/sample-sources/: 01-what-is-a-thesis.md  02-worked-example.md  03-practice-questions.md
markdown_mentor/: __init__.py  build_pack.py  check_pack.py  cli.py  export.py  guide.py  library_cli.py  project.py
site/: index.html
site/css/: style.css
site/downloads/: make-markdown-library.py  make-teaching-materials.py  setup-markdown-mentor.py
site/js/: copy.js  style-builder.js
site/pages/: download.html  install.html  library-maker.html  library.html  markdown-mentor.html  prompts.html  start-project.html  style-builder.html  workflow.html
site/pages/workflow/: step-1-collect-sources.html  step-1-create-project.html  step-10-style-file.html  step-11-export.html  step-2-build-content-pack.html  step-2-collect-sources.html  step-3-check-pack.html  step-4-make-library.html  (+12 more)
starter-project-template/: README-FIRST.md
starter-project-template/1-source-files/: prompt-find-more-source-materials.md
starter-project-template/3-teaching-approach/: prompt-check-teaching-approach.md  prompt-create-teaching-approach.md  teaching-approach.md
starter-project-template/4-teaching-materials-pack/: prompt-create-teaching-materials.md  teaching-materials-pack.md
tests/: test_export.py  test_library_maker.py  test_project.py
